--- a/3.숫자야구/package.json
+++ b/3.숫자야구/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^2.7.16"
   },
   "devDependencies": {
+    "vue-loader": "^15.11.1",
+    "vue-template-compiler": "^2.7.16",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   }
