--- a/4.반응속도체크/package.json
+++ b/4.반응속도체크/package.json
@@ -12,7 +12,9 @@
     "vue": "^2.7.16"
   },
   "devDependencies": {
+    "css-loader": "^7.1.2",
     "vue-loader": "^15.11.1",
+    "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.16",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
