--- a/4.반응속도체크/package.json
+++ b/4.반응속도체크/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --watch"
+    "build": "webpack --watch",
+    "dev": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.16",
     "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
